# julia

./: interactive.ipynb  julia.ipynb  pyproject.toml  readme.md
julia/: __init__.py  functions.py
