[tool.poetry]
name = "julia"
version = "0.1.0"
description = ""
authors = ["Jan Nils Ferner <jan@hohenheim.ch>"]

[tool.poetry.dependencies]
python = ">=3.9, <3.10"
numpy = "<=1.20"
matplotlib = "^3.5.0"
numba = "^0.54.1"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]
black = "^21.11b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
